# alcazar

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  config.yml
.github/workflows/: ci.yml
examples/: hello_world.rs  middleware.rs
src/: alcazar.rs  endpoint.rs  error.rs  http_parser.rs  http_request.rs  lib.rs  middleware.rs  request.rs  router.rs  status_code.rs
src/routing/: endpoint.rs  mod.rs  pattern.rs
