[package]
name            = "alcazar"
# Steps to release to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
#   - npm install -g auto-changelog && auto-changelog at the root
# - Create "v0.x.y" git tag at the root of the project.
version         = "0.0.0"
description     = "Alcazar: Zenith point of the web frameworks"
authors         = ["Mahmut Bulut <vertexclique@gmail.com>"]
keywords        = ["fault-tolerant", "runtime", "actor", "system"]
categories      = ["concurrency", "asynchronous"]
homepage        = "https://bastion.rs"
repository      = "https://github.com/bastion-rs/alcazar"
documentation   = "https://docs.rs/alcazar"
readme          = "README.md"
license         = "Apache-2.0/MIT"
edition         = "2018"
exclude         = [
	"scripts/*",
]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
httparse = "1.3.4"
regex = "1.3.9"
lazy_static = "1.4.0"
thiserror = "1.0.20"
url = "2.1.1"
bastion-executor = { git = "https://github.com/bastion-rs/bastion", branch = "igni/affine_steal_sort" }
lightproc = "0.3.5"
futures = "0.3.5"

# Log crates
tracing = "0.1.19"
